--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,6 @@
     <ul id="events"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const $events = document.getElementById('events');
-
-        const newItem = (content) => {
-          const item = document.createElement('li');
-          item.innerText = content;
-          return item;
-        };
-
-        const socket = io();
-
-        socket.on('socket:update', (list) => {
-          list.forEach(item => {
-
-            $events.appendChild(newItem(`${item.userAgent.name} @ ${item.userAgent.os} ${item.userAgent.device_type}`));
-          });
-        });
-    </script>
+    <script src="/client.js"></script>
 </body>
 </html>
