Add scss styles

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minimal working example</title>
+    <title>beacon</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="/styles/app.css">
+    <link rel="stylesheet" href="/styles/sockets.css">
 </head>
 <body>
-    <ul id="events"></ul>
+    <ul id="sockets"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
