Refactor CSS to functional css

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>beacon</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="stylesheet" href="/styles/app.css">
-    <link rel="stylesheet" href="/styles/sockets.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <ul id="sockets"></ul>
+    <ul id="sockets" class="List bgBlack textWhiteGrey"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
