Control-less youtube playing on client side

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,7 +18,10 @@
     <ul id="sockets" class="List bgBlack textWhiteGrey"></ul>
     <!--/SocketsList-->
 
-    <audio id="player" controls></audio>
+    <video id="content"></video>
+    <div>
+        <h1 id="contenttitle"></h1>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/client.js"></script>
