Move search logic to dedicated component

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--Search Bar-->
-    <form id="searchbar" class="Form" onsubmit="event.preventDefault(); handleSearch(event);">
+    <form id="searchbar" class="Form">
         <input id="searchinput" class="Input Text bgBlackLight textWhite" type="text" autofocus>
         <input type="submit" class="Input Submit bgWhiteGrey">
     </form>
