Update video window style

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <!--/Queue List-->
 
     <!--Video playing-->
-    <video id="content"></video>
+    <video id="content" class="Video"></video>
     <h1 id="contenttitle"></h1>
     <!--/Video playing-->
 
