Add castor icon

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Castor</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" type="image/png" href="/icons/castor.png">
 </head>
 <body>
     <!--Search Bar-->
